data/derived/comb/progs/unify/prog2625.ml.out
Characters 204-230:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type (int * int) list
       but an expression was expected of type 'a * 'b
